fix: backdrop not covering the whole screen [OLT-3848]
Merged in fix_backdrop-not-covering-the-whole-screen-OLT-3848 (pull request #128)

fix: backdrop not covering the whole screen [OLT-3848]

* Added z-index to Navbar backdrop

* Updated package to fix vulnerability

Approved-by: Heinz Hölzer
Approved-by: Ivan Drinchev

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,6 +3,7 @@
   $navbar-padding-x: 1rem;
   $navbar-padding-y: 0;
   $navbar-backdrop: rgba(255, 255, 255, 0.7);
+  $navbar-content-z: 1000;
   $navbar-logo: './components/Navbar/lightelligence.svg';
 
   $self: &;
@@ -88,6 +89,7 @@
       right: 0;
       bottom: 0;
       background: $navbar-backdrop;
+      z-index: $navbar-content-z;
       display: none;
     }
 
@@ -98,7 +100,7 @@
 
   &-content {
     position: fixed;
-    z-index: 1000;
+    z-index: $navbar-content-z;
     left: 0;
     top: 0;
     bottom: 0;
